# mpi-examples

./: CMakeLists.txt  README.md  hello_world.cpp  run.ps1  send_recieve.cpp  trapezoid.cpp
